<resources>
    <string name="facebook_app_id" translatable="false">239929504671619</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb239929504671619</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_lbl_albums">Albums</string>
    <string name="navigation_lbl_quantum">Quantum</string>
    <string name="navigation_lbl_rife">Rife</string>
    <string name="navigation_lbl_programs">Programs</string>
    <string name="navigation_lbl_videos">Videos</string>
    <string name="navigation_lbl_shop">Shop</string>
    <string name="navigation_lbl_options">Options</string>
    <string name="options_qi_coil">GET QI COIL</string>
    <string name="options_sign_in">Sign in</string>
    <string name="options_log_out">Logout</string>
    <string name="options_delete_user">Delete User</string>
    <string name="profile_lbl_subscription">Subscription</string>
    <string name="tv_restore_purchase">Restore Purchase</string>
    <string name="profile_lbl_instructions">Instructions</string>
    <string name="profile_lbl_disclaimer">Disclaimer</string>
    <string name="profile_lbl_about">About</string>
    <string name="btn_play">Play</string>
    <string name="btn_add">Add</string>
    <string name="start_fetching">Start fetching files.</string>
    <string name="start">Start</string>
    <string name="complete_over" translatable="false">%1$d/%2$d</string>
    <string name="fetch_done">Fetching done.</string>
    <string name="reset">RESET</string>
    <string name="game_download_error">An error occurred, could not get files.</string>
    <string name="notification_channel_name">Player controls</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="downloader_utils_eta_sec" translatable="false">%1$ds left</string>
    <string name="downloader_utils_eta_min" translatable="false">%1$dm %2$ds left</string>
    <string name="downloader_utils_eta_hrs" translatable="false">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes" translatable="false">%1$d B/s</string>
    <string name="download_speed_kb" translatable="false">%1$s KB/s</string>
    <string name="download_speed_mb" translatable="false">%1$s MB/s</string>
    <string name="total_time">total time %1$s</string>
    <string name="options_version" translatable="false">&#160;v %1$s</string>
    <string name="toast_download_complete">Download Complete!</string>
    <string name="txt_total_time">TOTAL TIME</string>
    <string name="txt_my_playlists">MY PROGRAMS</string>
    <string name="txt_share">SHARE</string>
    <string name="txt_delete">DELETE</string>
    <string name="txt_save">SAVE</string>
    <string name="txt_add">ADD</string>
    <string name="txt_create_playlist">Create Playlist</string>
    <string name="txt_edit_playlist">Edit Playlist</string>
    <string name="txt_playlist_name">Playlist name</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_no">NO</string>
    <string name="txt_enter_password">Enter Password</string>
    <string name="txt_plz_enter_playlist_name">Please enter playlist name</string>
    <string name="txt_create_playlist_success">Created playlist successfully</string>
    <string name="txt_edit_playlist_name_success">Edited playlist\'s name successfully</string>
    <string name="txt_delete_playlist_name_success">Deleted playlist successfully</string>
    <string name="txt_no_songs">No Frequencies</string>
    <string name="txt_no_result">No Results Found</string>
    <string name="txt_search_songs">Search Frequencies</string>
    <string name="txt_no_playlist">No Programs</string>
    <string name="txt_no_albums">No albums</string>
    <string name="msg_download_data">Downloading data&#8230; Please wait</string>
    <string name="msg_error_when_download">Cannot download data! Please try again</string>
    <string name="txt_try_again">Try again</string>
    <string name="txt_cancel">Cancel</string>
    <string name="msg_coming_soon">Coming soon&#8230;</string>
    <string name="msg_add_first_playlist">Please add first playlist</string>
    <string name="txt_downloading">Downloading</string>
    <string name="txt_downloaded">Downloading</string>
    <string name="msg_loading">Loading&#8230;</string>
    <string name="txt_disclaimer_title">Disclaimer and Waiver</string>
    <string name="txt_disclaimer_content">By using this app, to the extent permitted by applicable law, you release this app’s creator, website and its Affiliates, and it’s and their employees, agents and representatives from any and all liability, damage or loss.  This app and tablet are not medical devices are not intended to be used to diagnose, treat, cure or prevent any disease. This app has not been evaluated by the FDA and no medical claims are made or implied for this app.  If you feel discomfort or dizziness, stop using this app.  Always consult with your doctor before using any or our products.</string>
    <string name="txt_agree">Agree</string>
    <string name="txt_disagree">Disagree</string>
    <string name="txt_later">Show again</string>
    <string name="txt_about">About</string>
    <string name="txt_yes">YES</string>
    <string name="txt_warning_clear_playlist">Are you sure you want to clear the current playlist?</string>
    <string name="txt_warning_update_newversion_title">Update Available</string>
    <string name="txt_warning_update_newversion">An update is available. Would you like to update the application now?\nIn case, you cannot install the new version. Please clear Google Play Store app cache and try again.</string>
    <string name="txt_downloading_dot">Downloading…</string>
    <string name="txt_donot_show_message">Do not show this message again</string>
    <string name="txt_now_playing">Now Playing: %1$s</string>
    <string name="txt_warning_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="tv_7_days_free">7 Days\nFree</string>
    <string name="tv_7_days_free_limited_time_offer">7 DAYS FREE \n Limited Time Offer</string>
    <string name="tv_free_trial">Free Trial</string>
    <string name="tv_1_month">1\nmonth</string>
    <string name="tv_1_year">1\nyear</string>
    <string name="tv_message_billing_1">• Unlock All Qi Coil Albums Collection</string>
    <string name="tv_message_billing_2">• Customizable Programs</string>
    <string name="tv_message_billing_3">• Pre-Loaded Programs</string>
    <string name="tv_subscription_info">SUBSCRIPTION INFO</string>
    <string name="txt_about_subscribe_1">• Privacy Policy: http://www.tattoobookapp.com/quantumwavebiotechnology/privacy/</string>
    <string name="txt_about_subscribe_2">• Terms of use: http://www.tattoobookapp.com/quantumwavebiotechnology/terms/</string>
    <string name="txt_about_subscribe_3">• Any unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication.</string>
    <string name="tv_back">back</string>
    <string name="tv_sub_info_1">• No cancellation of the current subscription is allowed during active subscription period</string>
    <string name="tv_sub_info_2">• Subscriptions may be managed by the user and auto-renewal may be turned off by going to the user’s Account Settings after purchase</string>
    <string name="tv_sub_info_3">• Subscription automatically renews unless auto-renew is turned off at least 24-hours before the end of the current period</string>
    <string name="tv_sub_info_4">• Payment will be charged to Google Account at confirmation of purchase</string>
    <string name="tv_sub_info_5">• Free trial - 7 days free, then $24.99 per month. The price corresponds to the same prece segment, which are set in the Android Google Play for other currencies</string>
    <string name="tv_price_of_subscription">price of subscription:</string>
    <string name="tv_sub_info_6">• 1 Month, 7 days free trial</string>
    <string name="tv_length_of_subscription">Length of subscription:</string>
    <string name="tv_start_free_trial">start free trial</string>
    <string name="tv_subscription_now">BUY NOW</string>
    <string name="tv_activate">Activate your\nFree trial</string>
    <string name="tv_auto_renewable_subscription_info">Auto-Renewable Subscription info:</string>
    <string name="tv_flash_sale">FLASH SALE</string>
    <string name="tv_available_until">&#160;Available Until&#160;</string>
    <string name="txt_then_trial_price">Then %1$s/month</string>
    <string name="tv_advanced_frequencies">ABUNDANCE I</string>
    <string name="tv_basic_frequencies">BASIC</string>
    <string name="tv_master_frequencies">MASTER</string>
    <string name="tv_advanced_meditation_frequencies">ADVANCED \n MEDITATION FREQUENCIES</string>
    <string name="tv_advanced_meditation_frequencies_2">ADVANCED MEDITATION FREQUENCIES</string>
    <string name="tv_transform_yourself_faster_with_advanced_mind_enhancement_frequencies">Transform Yourself Faster with Advanced Mind Enhancement Frequencies</string>
    <string name="tv_title_sub_item_1"><![CDATA[• Brainwave & mind power enhancement]]></string>
    <string name="tv_title_sub_item_2">​• Amplify your power to create, manifest and attract abundance</string>
    <string name="tv_title_sub_item_3">• Accelerated health</string>
    <string name="tv_title_sub_item_4">​• Raise your spiritual resonance</string>
    <string name="tv_title_sub_item_5">​​• Explore uncharted realms of lucid dreaming and astral projection</string>
    <string name="tv_recurring_billing">Recurring Billing. Cancel Anytime.</string>
    <string name="tv_one_time_payment">One Time Payment</string>
    <string name="tv_title_subscription_monthly">This subscription automatically renews for $19,99 per month unless it is cancelled in your account settings on the Google Play at least 24-hours before the end of the trial period. Payments are charged to the your Google account at confirmation of purchase. The account is charged for the renewal within 24 hours before the end of the current period.  Any unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication.</string>
    <string name="tv_title_subscription_lifetime">Payments are charged to the your Google account at confirmation of purchase. The account is charged for the renewal within 24 hours before the end of the current period.  Any unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication. By continuing, you agree to our</string>
    <string name="tv_link">Terms and Privacy Policy</string>
    <string name="tv_monthly">monthly</string>
    <string name="tv_per_month">per month</string>
    <string name="tv_annual">Annual</string>
    <string name="tv_per_year">per year</string>
    <string name="tv_lifetime">lifetime</string>
    <string name="tv_pay_once">pay once</string>
    <string name="tv_continue">Continue</string>
    <string name="tv_basic_subscription">Essential Subscription</string>
    <string name="tv_unlock_meditation_prequencies">UNLOCK   MEDITATION FREQUENCIES</string>
    <string name="tv_unlock_meditation_prequencies_2">UNLOCK MEDITATION FREQUENCIES</string>
    <string name="tv_offer_expires_in">Offer Expires In:</string>
    <string name="tv_change_password">Change Password</string>
    <string name="tv_help_support">Help &amp; Support</string>
    <string name="flash_sale_50_off">Flash Sale - 50% OFF</string>
    <string name="tv_sign_in">Sign In</string>
    <string name="tv_favorites">Favorites</string>
    <string name="flash_sale_colon" translatable="false">:</string>
    <string name="flash_sale_00" translatable="false">00</string>
    <string name="tv_disclaimer">Disclaimer</string>
</resources>