<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#000"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.Meditation.Sounds.frequencies.views.CustomFontTextView
            android:id="@+id/btnInstructions"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_item_dialog_20"
            android:text="@string/profile_lbl_instructions"
            android:textColor="@drawable/bg_text"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            font:fontText="fonts/MyriadPro_Semibold.otf" />

        <com.Meditation.Sounds.frequencies.views.CustomFontTextView
            android:id="@+id/btnDisclaimerInfor"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_item_dialog_20"
            android:text="@string/tv_disclaimer"
            android:textColor="@drawable/bg_text"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            font:fontText="fonts/MyriadPro_Semibold.otf" />

        <com.Meditation.Sounds.frequencies.views.CustomFontTextView
            android:id="@+id/btnAbout"
            android:layout_width="@dimen/width_button"
            android:layout_height="@dimen/height_button"
            android:layout_marginTop="@dimen/margin_item_dialog_20"
            android:text="@string/txt_about"
            android:textColor="@drawable/bg_text"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            font:fontText="fonts/MyriadPro_Semibold.otf" />
    </LinearLayout>
</FrameLayout>
